[gd_scene load_steps=4 format=3]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/Main_tiles.png" type="Texture2D" id=2]
[ext_resource path="res://assets/ui/panel_frame.png" type="Texture2D" id=3]
[ext_resource path="res://ui/button_theme.tres" type="Theme" id=4]

[node name="MainMenu" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.07, 0.09, 1.0)

[node name="Pattern" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
stretch_mode = 1
modulate = Color(1, 1, 1, 0.35)

[node name="CenterPanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -200.0
offset_right = 280.0
offset_bottom = 200.0
texture = ExtResource("3")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24
theme = ExtResource("4")

[node name="VBox" type="VBoxContainer" parent="CenterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0
alignment = 1
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CenterPanel/VBox"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
text = "ISEKAI SURVIVOR"
theme_override_font_sizes/font_size = 52

[node name="Subtitle" type="Label" parent="CenterPanel/VBox"]
layout_mode = 2
horizontal_alignment = 1
text = "Endure the night, grow stronger, defy the boss."

[node name="Buttons" type="VBoxContainer" parent="CenterPanel/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 12

[node name="StartButton" type="Button" parent="CenterPanel/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start Run"

[node name="EquipmentButton" type="Button" parent="CenterPanel/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Equipment"

[node name="QuitButton" type="Button" parent="CenterPanel/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quit"
